# quasicrystal-inflation-code

./: .gitignore  README.md  pyproject.toml  requirements.txt  scripttestibm.py  scriptthestbraid.py  test_anyonic_operators.py
notebooks/: Run_QIC_simulations.ipynb  qic_noise_resilience_analysis.ipynb
simulations/: approximate_local_unitary_synthesis_from_optimal.py  batch_unitary_synthesis_analysis.py  calculate_jones_ideal_embedded.py  calculate_jones_ideal_embedded_knotinfo_braid.py  calculate_jones_knotinfo_braid.py  calculate_jones_knotinfo_braid_12a122.py  calculate_jones_qic_core_12a122.py  calculate_jones_qic_core_12a122_calibrated.py  calculate_jones_qic_core_3_1_calibrated.py  calculate_jones_qic_core_final.py  calculate_jones_qic_core_unknot.py  calculate_renormalized_jones.py  compare_transpilation_methods.py  compute_jones_hybrid_simulation.py  compute_jones_qic_core_B.py  compute_jones_qic_core_Bprime.py  compute_jones_quantum_b_gate.py  compute_jones_stochastic_b_gate.py  evaluate_final_model_accuracy.py  find_optimal_local_approximator.py  find_optimal_local_approximator_from_theory.py  generate_and_demonstrate_gate.py  old_approximate_local_unitary_synthesis.py  old_approximate_local_unitary_synthesis_from_optimal.py  old_run_qic_hardware_resource_sweep_final_model.py  run_b_gate_quantum_verification.py  run_b_gate_scalable_quantum_verification.py  run_jones_12a122.py  run_jones_on_ibm_b_gate.py  run_jones_sim.py  run_jones_sim_quantinuum.py  run_jones_sim_standard.py  run_jones_sim_v2_plat.py  run_jones_unknot.py  run_n3_fusion_simulation.py  (+15 more)
(+3 files in other folders)
